cosmetic fine tuning now that button alignment fixed

--- a/a4.css
+++ b/a4.css
@@ -137,7 +137,7 @@ li.dropdown {
 legend{
   font-weight: bold;
   font-family: Helvetica, sans-serif;
-  padding: 2px;
+  padding: 0px;
 }
 
 .customerBox {
